[gd_scene load_steps=7 format=3 uid="uid://bov4q4bvg80de"]

[ext_resource type="Script" path="res://Levels/Scr_IconDisplayDrawer.gd" id="1_cuhda"]
[ext_resource type="Script" path="res://Game_objects/UI/Scr_recipe_tutorial.gd" id="1_h7oul"]
[ext_resource type="PackedScene" uid="uid://b1u1o73wqcrkl" path="res://Game_objects/UI/icon_display.tscn" id="2_0mduo"]
[ext_resource type="Texture2D" uid="uid://deveimd1lbsq2" path="res://Images/Category_items.png" id="3_jlc38"]
[ext_resource type="Script" path="res://Scripts/Common/Scr_Recipe.gd" id="4_t8at0"]
[ext_resource type="Theme" uid="uid://dvkh57vkbpolq" path="res://Themes/BasicButton.tres" id="6_45kv1"]

[node name="RecipeSystem" type="Node2D" node_paths=PackedStringArray("recipe_info_panel", "recipe_modal", "recipe_object")]
script = ExtResource("1_h7oul")
recipe_info_panel = NodePath("RecipeInfo")
recipe_modal = NodePath("CanvasLayer/Control")
recipe_object = NodePath("Recipe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Modal" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Next" type="Button" parent="CanvasLayer/Control"]
offset_left = 562.0
offset_top = 500.0
offset_right = 700.0
offset_bottom = 564.0
theme = ExtResource("6_45kv1")
text = "Next"

[node name="Previous" type="Button" parent="CanvasLayer/Control"]
offset_left = 318.0
offset_top = 500.0
offset_right = 456.0
offset_bottom = 564.0
theme = ExtResource("6_45kv1")
text = "Previous"

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 25.0
offset_top = 23.0
offset_right = 146.0
offset_bottom = 87.0
theme = ExtResource("6_45kv1")
text = "Recipes"

[node name="RecipeInfo" type="Panel" parent="." node_paths=PackedStringArray("container", "titleLabel")]
visible = false
self_modulate = Color(1, 0.313726, 1, 1)
z_index = 200
anchors_preset = 10
anchor_right = 1.0
offset_left = 356.0
offset_top = 84.0
offset_right = 712.0
offset_bottom = 493.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("1_cuhda")
icon_display_prefab = ExtResource("2_0mduo")
container = NodePath("VBoxContainer")
titleLabel = NodePath("Title")
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="RecipeInfo"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 38
text = "Recipe : Roasted Lemons with Chicken Sauce"
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="RecipeInfo"]
visible = false
texture = ExtResource("3_jlc38")
hframes = 8

[node name="VBoxContainer" type="VBoxContainer" parent="RecipeInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
offset_top = 133.0
grow_horizontal = 2
grow_vertical = 2

[node name="Recipe" type="Node2D" parent="." node_paths=PackedStringArray("RecipeInfoPanel", "RecipeInfoContainer")]
script = ExtResource("4_t8at0")
RecipeInfoPanel = NodePath("../RecipeInfo")
RecipeInfoContainer = NodePath("../RecipeInfo/VBoxContainer")

[connection signal="pressed" from="CanvasLayer/Control/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
